--- a/index.html
+++ b/index.html
@@ -1,49 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>520表白</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #f9f9f9;
-        }
-        h1 {
-            color: #ff4e6a;
-        }
-        p {
-            color: #333;
-            font-size: 18px;
-        }
-        #heart {
-            width: 100px;
-            height: 100px;
-            background-color: #ff4e6a;
-            transform: rotate(45deg);
-            position: relative;
-            margin: 0 auto;
-        }
-        #heart::before,
-        #heart::after {
-            content: '';
-            width: 100px;
-            height: 100px;
-            background-color: #ff4e6a;
-            border-radius: 50%;
-            position: absolute;
-        }
-        #heart::before {
-            top: -50px;
-            left: 0;
-        }
-        #heart::after {
-            top: 0;
-            left: 50px;
-        }
-    </style>
+<meta charset="UTF-8">
+<title>520 I Love You</title>
+<style>
+body {background: #f5f5f5; text-align: center; font-family: "Microsoft YaHei";}
+.header {background: url(header.jpg) no-repeat center; height: 600px;}
+.header .text {position: absolute; top: 70%; left: 50%; transform: translate(-50%, -50%); color: #fff; font-size: 30px;}
+.section {width: 80%; margin: auto; overflow: hidden;} 
+.pink {color:#ff69b4;} .blue {color:#1e90ff;}
+</style>
 </head>
+<body>
+<div class="header">
+<div class="text"><span class="pink">520</span> <span class="blue">I Love You</span></div>
+</div>
+<div class="section">
+<video src="video.mp4" width="100%" controls>视频</video>
+<p><span class="pink">世间最美的风景,是和你手牵手</span> <span class="blue">一起度过的每一天</span></p>
+</div> 
+<div class="section">        
+<p style="font-size:24px;"><span class="pink">一群小物什,</span> <span class="blue">一首爱的歌谣,</span></p> 
+<p><img src="items.jpg" width="100%"></p>  
+</div>
+<p style="font-size:30px;">我的世界不允许你的离开,<br>你是我的今生唯一。  </p>
+<a href="letter.html"><button style="font-size:24px;background:#1e90ff;color:#fff;border-radius:20px;">I Love You</button></a>
+<div style="width:80%;margin:auto; border-bottom:1px solid #ccc;"></div>
+<p style="font-size:50px;"><span class="pink">520,</span> <span class="blue">我爱你</span></p>
+</body>
+</html>
 <body>
     <h1>亲爱的（hmy），</h1>
     <div id="heart"></div>
