--- a/index.html
+++ b/index.html
@@ -1,31 +1,29 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
-<head>
-<meta charset="UTF-8">
+<head> 
+<meta charset="UTF-8">  
 <title>520 I Love You</title>
 <style>
-body {background: #f5f5f5; text-align: center; font-family: "Microsoft YaHei";}
-.header {background: url(header.jpg) no-repeat center; height: 600px;}
-.header .text {position: absolute; top: 70%; left: 50%; transform: translate(-50%, -50%); color: #fff; font-size: 30px;}
-.section {width: 80%; margin: auto; overflow: hidden;} 
+body {background: #f5f5f5; text-align: center; font-family: "Microsoft YaHei";} 
+.header {background: url(header.jpg) no-repeat center; height: 600px;} 
+.header .text {position: absolute; top: 70%; left: 50%; transform: translate(-50%, -50%); color: #fff; font-size: 30px;}  
+.section {width: 80%; margin: auto; overflow: hidden;}  
 .pink {color:#ff69b4;} .blue {color:#1e90ff;}
 </style>
 </head>
-<body>
-<div class="header">
-<div class="text"><span class="pink">520</span> <span class="blue">I Love You</span></div>
-</div>
+<body> 
+<div class="header"> <div class="text"><span class="pink">520</span> <span class="blue">I Love You</span></div> </div>
 <div class="section">
-<video src="video.mp4" width="100%" controls>视频</video>
-<p><span class="pink">世间最美的风景,是和你手牵手</span> <span class="blue">一起度过的每一天</span></p>
-</div> 
-<div class="section">        
-<p style="font-size:24px;"><span class="pink">一群小物什,</span> <span class="blue">一首爱的歌谣,</span></p> 
-<p><img src="items.jpg" width="100%"></p>  
+<iframe width="560" height="315" src="https://www.bilibili.com/video/BV1ey4y1R7Jf/?spm_id_from=333.999.0.0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<p><span class="pink">世间最美的风景,是和你手牵手</span> <span class="blue">一起度过的每一天</span></p> 
+</div>    
+<div class="section">         
+<p style="font-size:24px;"><span class="pink">一群小物什,</span> <span class="blue">一首爱的歌谣,</span></p>  
+<p><img src="items.jpg" width="100%"></p>   
 </div>
 <p style="font-size:30px;">我的世界不允许你的离开,<br>你是我的今生唯一。  </p>
-<a href="letter.html"><button style="font-size:24px;background:#1e90ff;color:#fff;border-radius:20px;">I Love You</button></a>
-<div style="width:80%;margin:auto; border-bottom:1px solid #ccc;"></div>
+<a href="letter.html"><button style="font-size:24px;background:#1e90ff;color:#fff;border-radius:20px;">I Love You</button></a> 
+<div style="width:80%;margin:auto; border-bottom:1px solid #ccc;"></div> 
 <p style="font-size:50px;"><span class="pink">520,</span> <span class="blue">我爱你</span></p>
 </body>
 </html>
