--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body {background: #f5f5f5; text-align: center; font-family: "Microsoft YaHei";}
 <body>  
 <div class="header">  <div class="text"><span class="pink">520</span> <span class="blue">I Love You</span></div>  </div>
 <div class="section">
-<iframe width="560" height="315" src="video.MOV" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<video src="video.mp4" width="100%" controls>视频</video>
 <p><span class="pink">世间最美的风景,是和你手牵手</span> <span class="blue">一起度过的每一天</span></p> </div>         <div class="section">          <p style="font-size:24px;"><span class="pink">一群小物什,</span> <span class="blue">一首爱的歌谣,</span></p>   <p><img src="items.jpg" width="100%"></p>      </div>
 <p style="font-size:30px;">我的世界不允许你的离开,<br>你是我的今生唯一。   </p> 
 <a href="letter.html"><button style="font-size:24px;background:#1e90ff;color:#fff;border-radius:20px;">I Love You</button></a>  
