--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <img src="photo4.jpg" style="width: 100px; position: absolute; top: 310px; left: 140px;">
   </div>
   
-  <video id="video" src="video.mov" autoplay loop muted></video>
+  <video id="video" src="video.mp4" autoplay loop muted></video>
   
   <p>亲爱的，520快乐！在这特别的日子里，我想对你说：<br>你是我生命中最重要的人，每天都被你的美丽和善良所感动。<br>爱你已经成为我生活的一部分，你给我带来了无尽的快乐和幸福。<br>我愿意陪伴你走过每一天，爱你直到永远！</p>
 </body>
