--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>520表白</title>
+  <title>520 I LOVE U</title>
   <style>
     body {
       background-color: #f7f7f7;
