--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </style>
 </head>
 <body>
-  <h1>亲爱的，我爱你！</h1>
+  <h1>亲爱的HMY，我爱你！</h1>
   
   <div id="heart">
     <img src="photo1.jpg" style="width: 100px; position: absolute; top: 50px; left: 140px;">
@@ -43,6 +43,6 @@
   
   <video id="video" src="video.mp4" autoplay loop muted></video>
   
-  <p>亲爱的，520快乐！在这特别的日子里，我想对你说：<br>你是我生命中最重要的人，每天都被你的美丽和善良所感动。<br>爱你已经成为我生活的一部分，你给我带来了无尽的快乐和幸福。<br>我愿意陪伴你走过每一天，爱你直到永远！</p>
+  <p>亲爱的hmy，520快乐！在这特别的日子里，我想对你说：<br>你是我生命中最重要的人，每天都被你的美丽和善良所感动。<br>爱你已经成为我生活的一部分，你给我带来了无尽的快乐和幸福。<br>我愿意陪伴你走过每一天，爱你直到永远！</p>
 </body>
 </html>
