--- a/index.html
+++ b/index.html
@@ -21,9 +21,6 @@
       margin-top: 30px;
       width: 400px;
       height: 400px;
-      background-image: url('heart.png');
-      background-repeat: no-repeat;
-      background-position: center;
       position: relative;
     }
     
@@ -71,6 +68,7 @@
   
   <video id="video" src="video.mp4" autoplay loop></video>
   
-  <p>亲爱的hmy，520快乐！在这特别的日子里，我想对你说：<br>你是我生命中最重要的人，每天都被你的美丽和善良所感动。<br>爱你已经成为我生活的一部分，你给我带来了无尽的快乐和幸福。<br>我愿意陪伴你走过每一天，爱你直到永远！</p>
+  <p>亲爱的，520快乐！在这特别的日子里，我想对你说：<br>你是我生命中最重要的人，每天都被你的美丽和善良所感动。<br>爱你已经成为我生活的一部分，你给我带来了无尽的快乐和幸福。<br>我愿意陪伴你走过每一天，爱你直到永远！</p>
 </body>
 </html>
+
