--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   </style>
 </head>
 <body>
-  <h1>亲爱的，我爱你！</h1>
+  <h1>亲爱的HMY，我爱你！</h1>
   
   <div id="heart">
     <img id="photo1" src="photo1.jpg">
