--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   
   <video id="video" src="video.mp4" autoplay loop></video>
   
-  <p>亲爱的，520快乐！在这特别的日子里，我想对你说：<br>你是我生命中最重要的人，每天都被你的美丽和善良所感动。<br>爱你已经成为我生活的一部分，你给我带来了无尽的快乐和幸福。<br>我愿意陪伴你走过每一天，爱你直到永远！</p>
+  <p>源子猪猪，520快乐！在这特别的日子里，我想对你说：<br>很喜欢听你睡觉时的小动静<br>总有一天<br>电话里的晚安会变成亲吻<br>视频里的安慰会变成拥抱<br>辛酸背后是相爱<br>熬过时间便是永远</p>
 </body>
 </html>
 
