--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   </style>
 </head>
 <body>
-  <h1>My HMY，Love u！</h1>
+  <h1>MY HMY，Love u！</h1>
   
   <div id="heart">
     <img id="photo1" src="photo1.jpg">
