--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
       justify-content: center;
       align-items: center;
       margin-top: 30px;
-      width: 500px;
-      height: 500px;
+      width: 400px;
+      height: 400px;
       position: relative;
+      margin: 0 auto; /* 居中 */
     }
     
     #heart img {
-      width: 120px;
+      width: 100px;
       position: absolute;
     }
     
