--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
       left: 140px;
     }
     
+    #photo5 {
+      width: 200px;
+      top: 180px;
+      left: 160px;
+    }
+    
     #video {
       width: 100%;
       height: auto;
@@ -72,6 +78,7 @@
     <img id="photo2" src="photo2.jpg">
     <img id="photo3" src="photo3.jpg">
     <img id="photo4" src="photo4.jpg">
+    <img id="photo4" src="photo5.jpg">
   </div>
   
   <video id="video" src="video.mp4" autoplay loop></video>
