--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       justify-content: center;
       align-items: center;
       margin-top: 30px;
-      width: 700px;
-      height: 700px;
+      width: 900px;
+      height: 900px;
       position: relative;
       margin: 0 auto; /* 居中 */
     }
@@ -70,11 +70,11 @@
   <div id="heart">
     <img id="photo1" src="photo1.jpg">
     <img id="photo2" src="photo2.jpg">
-    <img id="photo3" src="photo3.jpg">
     <img id="photo4" src="photo4.jpg">
+    <img id="photo3" src="photo3.jpg">
   </div>
   
-  <video id="video" src="video.mp4" autoplay loop></video>
+  <video id="video" src="video.mp4" autoplay></video>
   
   <p>源子猪猪，520快乐！在这特别的日子里，我想对你说：<br>很喜欢听你睡觉时的小动静<br>总有一天<br>电话里的晚安会变成亲吻<br>视频里的安慰会变成拥抱<br>辛酸背后是相爱<br>熬过时间便是永远</p>
 </body>
