--- a/index.html
+++ b/index.html
@@ -92,7 +92,15 @@
     <img id="photo7" src="photo7.jpg">
   </div>
   
-  <video id="video" src="video.mp4" autoplay></video>
+  <video id="video" src="video.mp4"></video>
+<button onclick="playVideo()">播放视频</button>
+
+<script>
+function playVideo() {
+  var video = document.getElementById('video');
+  video.play();
+}
+</script>
   
   <p>源子猪猪，520快乐！在这特别的日子里，我想对你说：<br>很喜欢听你睡觉时的小动静<br>总有一天<br>电话里的晚安会变成亲吻<br>视频里的安慰会变成拥抱<br>辛酸背后是相爱<br>熬过时间便是永远</p>
 </body>
